--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">TutorApp-MOBAPDE</string>
+    <string name="app_name">CodeMe</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="search">Search</string>
+    <string name="signin">Sign In</string>
+    <string name="register">Register</string>
+    <string name="email">Email</string>
+    <string name="fullname">Full Name</string>
+    <string name="register_prompt">Register to CodeMe</string>
+    <string name="postedby">Posted By: </string>
+    <string name="code_type">Code Type: </string>
+    <string name="last_modified">Last modified: </string>
 </resources>
